try to fix ql-editor not showing bottom text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1099,7 +1099,7 @@ footer a:hover {
   }
 
   .middle-container {
-    padding-top: 70px;
+    padding-top: 120px;
   }
 
   /* project */
